Fix create order error.
