# docs/swagger.json
@@ -24,7 +24,7 @@
                 "tags": [
                     "Order"
                 ],
-                "summary": "Get all orders for the current user",
+                "summary": "Get all orders for the current user (paginated)",
                 "parameters": [
                     {
                         "enum": [
@@ -208,6 +208,11 @@
         },
         "/order": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates a new order for the user",
                 "consumes": [
                     "application/json"
@@ -739,9 +744,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/user_entity.User"
                 },
                 "user_id": {
                     "type": "string"
